--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/public/css/styles.css">  
+    <link rel="stylesheet" href="/css/styles.css">  
 </head>
 <body class="bg-sky-600">
 <div class="bg"></div>
@@ -48,6 +48,6 @@
         </div>
     </div>
 </div>
-<script src="/public/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
